Fix: Env --add-exports for DNS to work